--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,8 +1,11 @@
 .wrapper {
   margin: 0 auto;
   max-width: 800px;
-  background-color: $lighter-gray;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.footer {
+  font-size: 11px;
 }
 
 
